--- a/media.css
+++ b/media.css
@@ -75,7 +75,7 @@
     /* position: absolute; */
     height: 14rem;
     width: 14rem;
-    background-color: #6499e9;
+    background-color: #e5d283;
     opacity: 70%;
   }
 }
