--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
   font-family: "Inter", sans-serif;
   font-family: "Nunito", sans-serif;
   font-family: "Poppins", sans-serif;
+  background-color: rgb(182, 181, 241);
 }
 
 .container {
