--- a/media.css
+++ b/media.css
@@ -118,6 +118,30 @@
 }
 
 @media (max-width: 425px) {
+  .toolBox-cont {
+    height: 100vh;
+    width: 7rem;
+    background-color: #2e4374;
+    display: flex;
+    justify-content: center;
+    /* align-items: center; */
+    flex-direction: column;
+    position: fixed;
+    top: 0;
+    margin-left: -120px;
+    transition: all 0.5s;
+  }
+
+  .content > label > i {
+    display: block;
+  }
+
+  #check:checked ~ .toolBox-cont {
+    /* left: 0; */
+    position: fixed;
+    margin-left: 0;
+  }
+
   .task-heading-cont {
     height: 8vh;
     width: 55%;
@@ -132,7 +156,7 @@
     text-shadow: 1px 1px 1px black;
     position: fixed;
     top: 0;
-    left: 36%;
+    left: 27%;
     z-index: 1;
   }
 
