--- a/media.css
+++ b/media.css
@@ -148,7 +148,7 @@
 
 /*   .active-dlt-btn > span {
     display: block;
-    /* border: 2px solid black; */
+    border: 2px solid black;
     color: red;
     font-size: 0.8rem;
     margin-left: -1.8rem;
