--- a/style.css
+++ b/style.css
@@ -144,6 +144,7 @@ body {
 
 .active-dlt-btn {
   display: none;
+  color: red;
 }
 
 .modal-cont {
@@ -247,6 +248,7 @@ body {
   height: 18rem;
   width: 18rem;
   background-color: #f0f0f0;
+  position: relative;
   /* opacity: 70%; */
 }
 
@@ -259,6 +261,12 @@ body {
 .ticket-heading {
   height: 3rem;
   border-bottom: 2px solid #2e4374;
+}
+
+.ticket-lock {
+  position: absolute;
+  right: 0.8rem;
+  bottom: 0.5rem;
 }
 
 .active {
